cmake_minimum_required(VERSION 3.23)
project(new_cpp101)

set(CMAKE_CXX_STANDARD 14)

add_executable(new_cpp101 main.cpp gr001.cpp gr002.cpp)

add_executable(gr001 gr001.cpp)
add_executable(gr002 gr002.cpp)
add_executable(stdpair study/stdpair.cpp)
add_executable(citerator study/citerator.cpp)
add_executable(test test.cpp)
add_executable(ds00 ds00.cpp)
add_executable(dq0 dq0.cpp)
add_executable(d62_q1a_punch d62_q1a_punch.cpp)
add_executable(d62_q1a_punch_real d62_q1a_punch_real.cpp)
add_executable(ds01_pair_sum ds01_pair_sum.cpp)
add_executable(ds00_reverse2 grader/ds00_reverse2.cpp)
add_executable(d59_q0_vector_swap grader/d59_q0_vector_swap.cpp)
add_executable(ds02_intersection grader/ds02_intersection.cpp)
add_executable(ds01_most grader/ds01_most.cpp)
add_executable(d62_q1c_vector_intersection grader/d62_q1c_vector_intersection.cpp)
add_executable(d62_q1b_grandfather grader/d62_q1b_grandfather.cpp)
add_executable(d62_q1a_vote grader/d62_q1a_vote.cpp)
add_executable(d58_q0_rating grader/d58_q0_rating.cpp)
add_executable(ex00e3 grader/ex00e3.cpp)
add_executable(d63_qx_inside_interval grader/d63_qx_inside_interval.cpp)
add_executable(d63_q1b_interval_count grader/d63_q1b_interval_count.cpp)
add_executable(d63_q1a_hiatus grader/d63_q1a_hiatus.cpp)
add_executable(d64_q1a_card_battle grader/d64_q1a_card_battle.cpp)
add_executable(d63_q1b_list_erase grader/d63_q1b_list_erase.cpp)
add_executable(d60_q0_v2m grader/d60_q0_v2m.cpp)
add_executable(dq0_histogram grader/dq0_histogram.cpp)
add_executable(d64_q1a_second_min grader/d64_q1a_second_min.cpp)
add_executable(d59_q0_stack_concat grader/d59_q0_stack_concat.cpp)
add_executable(d62_q1b_queue_count grader/d62_q1b_queue_count.cpp)
add_executable(d64_q1b_password grader/d64_q1b_password.cpp)
add_executable(d64_q1b_moving_median grader/d64_q1b_moving_median.cpp)
add_executable(d60_q0_zipcode grader/d60_q0_zipcode.cpp)
add_executable(ex00m1 grader/ex00m1.cpp)
add_executable(ex00m2 grader/ex00m2.cpp)
add_executable(d63_q2a_pair_gte grader/d63_q2a_pair_gte.cpp)

add_executable(2560_midterm_07 grader/2560_midterm_07.cpp)
add_executable(2559_midterm_04 grader/2559_midterm_04.cpp)
add_executable(ds02_is_reverse grader/ds02_is_reverse.cpp)

add_executable(main grader/range_insert_package/main.cpp)
add_executable(d62_q2c_wasted_space grader/d62_q2c_wasted_space.cpp)
add_executable(d62_q2a_iterator_check grader/d62_q2a_iterator_check.cpp)
