cmake_minimum_required(VERSION 3.23)
project(new_cpp101)

set(CMAKE_CXX_STANDARD 14)

add_executable(new_cpp101 main.cpp gr001.cpp gr002.cpp)

add_executable(gr001 gr001.cpp)
add_executable(gr002 gr002.cpp)
add_executable(stdpair study/stdpair.cpp)
add_executable(citerator study/citerator.cpp)
add_executable(test test.cpp)
add_executable(ds00 ds00.cpp)
add_executable(dq0 dq0.cpp)
add_executable(d62_q1a_punch d62_q1a_punch.cpp)
add_executable(d62_q1a_punch_real d62_q1a_punch_real.cpp)
add_executable(ds01_pair_sum ds01_pair_sum.cpp)
add_executable(ds00_reverse2 grader_p1/ds00_reverse2.cpp)
add_executable(d59_q0_vector_swap grader_p1/d59_q0_vector_swap.cpp)
add_executable(ds02_intersection grader_p1/ds02_intersection.cpp)
add_executable(ds01_most grader_p1/ds01_most.cpp)
add_executable(d62_q1c_vector_intersection grader_p1/d62_q1c_vector_intersection.cpp)
add_executable(d62_q1b_grandfather grader_p1/d62_q1b_grandfather.cpp)
add_executable(d62_q1a_vote grader_p1/d62_q1a_vote.cpp)
add_executable(d58_q0_rating grader_p1/d58_q0_rating.cpp)
add_executable(ex00e3 grader_p1/ex00e3.cpp)
add_executable(d63_qx_inside_interval grader_p1/d63_qx_inside_interval.cpp)
add_executable(d63_q1b_interval_count grader_p1/d63_q1b_interval_count.cpp)
add_executable(d63_q1a_hiatus grader_p1/d63_q1a_hiatus.cpp)
add_executable(d64_q1a_card_battle grader_p1/d64_q1a_card_battle.cpp)
add_executable(d63_q1b_list_erase grader_p1/d63_q1b_list_erase.cpp)
add_executable(d60_q0_v2m grader_p1/d60_q0_v2m.cpp)
add_executable(dq0_histogram grader_p1/dq0_histogram.cpp)
add_executable(d64_q1a_second_min grader_p1/d64_q1a_second_min.cpp)
add_executable(d59_q0_stack_concat grader_p1/d59_q0_stack_concat.cpp)
add_executable(d62_q1b_queue_count grader_p1/d62_q1b_queue_count.cpp)
add_executable(d64_q1b_password grader_p1/d64_q1b_password.cpp)
add_executable(d64_q1b_moving_median grader_p1/d64_q1b_moving_median.cpp)
add_executable(d60_q0_zipcode grader_p1/d60_q0_zipcode.cpp)
add_executable(ex00m1 grader_p1/ex00m1.cpp)
add_executable(ex00m2 grader_p1/ex00m2.cpp)
add_executable(d63_q2a_pair_gte grader_p1/d63_q2a_pair_gte.cpp)

add_executable(2560_midterm_07 grader_p1/2560_midterm_07.cpp)
add_executable(2559_midterm_04 grader_p1/2559_midterm_04.cpp)
add_executable(ds02_is_reverse grader_p1/ds02_is_reverse.cpp)

add_executable(main grader_p4/kheap-student/main.cpp)
add_executable(d62_q2c_wasted_space grader_p1/d62_q2c_wasted_space.cpp)
add_executable(d62_q2a_iterator_check grader_p1/d62_q2a_iterator_check.cpp)

add_executable(test_stack grader_p2/sbv2_project/test_stack.cpp)

add_executable(d64_q3a_queue_check grader_p3/d64_q3a_queue_check.cpp)

add_executable(passtest study/passtest.cpp)
add_executable(d65x study/d65x.cpp)
add_executable(this_cp stl_cp/this_cp.cpp)
add_executable(ds03_heap_order grader_p4/ds03_heap_order.cpp)
add_executable(ds03_heap_erase grader_p4/ds03_heap_erase.cpp)

add_executable(d62_q3b_kheap_height grader_p4/d62_q3b_kheap_height.cpp)
add_executable(d62_q3a_heap_node_relation grader_p4/d62_q3a_heap_node_relation.cpp)
add_executable(d62_q3a_heap_descendant grader_p4/package_rank_in_heap/d62_q3a_heap_descendant.cpp)

add_executable(d57_q2_heap_order2 d57_q2_heap_order2.cpp)